--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,4 +5,19 @@
    
 
 
-{ "version": "0.2.0", "configurations": [ { "name": "Launch Chrome against localhost", "type": "chrome", "request": "launch", "url": "http://localhost:4200", "webRoot": "${workspaceRoot}" }, { "name": "Attach to Chrome", "type": "chrome", "request": "attach", "port": 4200, "webRoot": "${workspaceRoot}" } ] }
+{ "version": "0.2.0", "configurations": [
+    {
+        "name": "Launch Edge",
+        "request": "launch",
+        "type": "pwa-msedge",
+        "url": "http://localhost:8080",
+        "webRoot": "${workspaceFolder}"
+    },
+    {
+        "name": "Attach to Edge",
+        "port": 9222,
+        "request": "attach",
+        "type": "pwa-msedge",
+        "webRoot": "${workspaceFolder}"
+    },
+     { "name": "Launch Chrome against localhost", "type": "chrome", "request": "launch", "url": "http://localhost:4200", "webRoot": "${workspaceRoot}" }, { "name": "Attach to Chrome", "type": "chrome", "request": "attach", "port": 4200, "webRoot": "${workspaceRoot}" } ] }
